test/classes/initializers/errors/field-reinitialization.good
field-reinitialization.chpl:6: error: multiple initializations of field "favorite"
